--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -49,7 +49,7 @@
 			<version>1.6.4</version>
 		</dependency>
 
-		<!-- zavosnosti za validaciju atributa-->
+		<!-- zavisnosti za validaciju atributa-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
