--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -79,6 +79,11 @@
 			<version>3.1.0</version>
 		</dependency>
 
+		<!--JavaMailSender-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
