--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,3 +33,12 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Hibernate optimizacija SQL upita za Postgres bazu
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.globally_quoted_identifier = true
+
+#Mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=isaproject.ftn.2023@gmail.com
+spring.mail.password=zxocnrutmidhxrxs
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+
