--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -97,6 +97,18 @@
 			<version>3.4.1</version>
 		</dependency>
 
+		<!--For RabbitTemplate-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
