--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -42,3 +42,7 @@ spring.mail.password=zxocnrutmidhxrxs
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 
+#RabbitMQ connection
+myqueue=spring-boot1
+myqueue2=spring-boot2
+
