feat: location simulator sends coordinates

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -45,4 +45,5 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 #RabbitMQ connection
 myqueue=spring-boot1
 myqueue2=spring-boot2
+exchange=myexchange
 
