--- a/rabbitmq-private-hospital/src/main/resources/application.properties
+++ b/rabbitmq-private-hospital/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 #RabbitMQ queue
-myqueue=spring-boot1
+myqueue=spring-boot3
 
-myqueue2=spring-boot2
-routingkey=spring-boot2
-myexchange=myexchange
+myexchange=myexchange3
 server.port=8085
 
 
