--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -46,4 +46,5 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 myqueue=spring-boot1
 myqueue2=spring-boot2
 exchange=myexchange
-
+exchange2=myexchange2
+myqueue3=spring-boot3
