sending contract properly

--- a/rabbitmq-private-hospital/src/main/resources/application.properties
+++ b/rabbitmq-private-hospital/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #RabbitMQ queue
-myqueue=spring-boot3
+myqueue3=spring-boot3
 
-myexchange=myexchange3
+myexchange3=myexchange2
 server.port=8085
 
 
