feat: cancel message - can

--- a/rabbitmq-private-hospital/src/main/resources/application.properties
+++ b/rabbitmq-private-hospital/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 #RabbitMQ queue
+# create new contract   -> myexchange2, spring-boot3
+# cancel contract       -> myexchange2, spring-boot4
+# delivery of contract  -> myexchange2, spring-boot5
 myqueue3=spring-boot3
 myqueue4=spring-boot4
+myqueue5=spring-boot5
 
-myexchange3=myexchange2
+myexchange2=myexchange2
+
 server.port=8085
