--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -122,7 +122,11 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 
-
+		<!--For Redis cache-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
