--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -49,3 +49,11 @@ exchange=myexchange
 exchange2=myexchange2
 myqueue3=spring-boot3
 myqueue4=spring-boot4
+
+#Redis cache configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+
+#Load balancer configuration
+raft.server.urls=http://raft-server-1,http://raft-server-2,http://raft-server-3,http://raft-server-4,http://raft-server-5
+
